--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   min-width: 50%;
   padding-top: 2rem;
   background-color: silver;
@@ -127,6 +128,14 @@ button {
   .btn {
     width: 280px;
     margin-right: 2rem;
+  }
+  .btn:last-child {
+    margin-right: 0;
+  }
+}
+@media (min-width: 1400px) {
+  .btn {
+    margin-right: 3rem;
   }
 }
 .container {
@@ -166,6 +175,15 @@ section h2 {
     display: flex;
   }
 }
+@media (min-width: 1400px) {
+  .header h1 {
+    margin-bottom: 4rem;
+  }
+  .header p {
+    width: 820px;
+    margin-bottom: 5rem;
+  }
+}
 .offer {
   padding: 2rem 0;
   background-color: #4f4f4f;
@@ -203,7 +221,7 @@ section h2 {
     width: 31%;
   }
 }
-.gallery {
+.realizations {
   background-color: #b6b6b6;
 }
 
