--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -22,6 +22,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		justify-content: space-between;
 		min-width: 50%;
 		padding-top: 2rem;
 		background-color: silver;
@@ -65,6 +66,15 @@
 	.btn {
 		width: 280px;
 		margin-right: 2rem;
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+}
+
+@media (min-width: 1400px) {
+	.btn {
+		margin-right: 3rem;
 	}
 }
 
