--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -39,6 +39,18 @@ section h2 {
 	}
 }
 
+@media (min-width: 1400px) {
+	.header {
+		h1 {
+			margin-bottom: 4rem;
+		}
+		p {
+			width: 820px;
+			margin-bottom: 5rem;
+		}
+	}
+}
+
 ///////////////////////////////////////////// Header end
 ////////////////////////////////////////////////////////
 //////////////////////////////////////////// Offer
@@ -90,7 +102,7 @@ section h2 {
 ////////////////////////////////////////////////////////
 //////////////////////////////////////////// Gallery
 
-.gallery {
+.realizations {
 	background-color: $secondary-color;
 }
 
