--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -100,11 +100,88 @@ section h2 {
 
 ///////////////////////////////////////////// Offer end
 ////////////////////////////////////////////////////////
-//////////////////////////////////////////// Gallery
+//////////////////////////////////////////// Realizations
 
 .realizations {
+	padding: 2rem 0;
 	background-color: $secondary-color;
+	h2 {
+		margin-bottom: 2rem;
+	}
+	&__text {
+		padding: 2rem;
+		text-align: center;
+		background-color: $light-color;
+	}
+	.container {
+		.row {
+			margin-bottom: 4rem;
+		}
+	}
+	h3 {
+		margin-bottom: 1rem;
+	}
+	img {
+		display: block;
+		width: 100%;
+	}
+	p {
+		margin-bottom: 1rem;
+	}
+	ul {
+		margin-bottom: 2rem;
+	}
+	.btn {
+		width: 50%;
+		padding: 1rem;
+		margin: 0 auto;
+	}
 }
+
+@media (min-width: 992px) {
+	.realizations {
+		.container {
+			.row {
+				display: flex;
+				&:nth-child(odd) {
+					.realizations__text {
+						order: 2;
+						text-align: left;
+						.btn {
+							margin: 0;
+						}
+					}
+					.realizations__image {
+						order: 1;
+					}
+				}
+				&:nth-child(even) {
+					.realizations__text {
+						order: 1;
+						text-align: right;
+						.btn {
+							margin-right: 0;
+						}
+					}
+					.realizations__image {
+						order: 2;
+					}
+				}
+			}
+		}
+		&__text {
+			width: 50%;
+			padding: 2rem;
+		}
+		&__image {
+			width: 50%;
+		}
+	}
+}
+
+///////////////////////////////////////////// Realizations end
+////////////////////////////////////////////////////////
+//////////////////////////////////////////// price
 
 .price {
 	background-color: $theme-color;
