--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -1,4 +1,9 @@
 @use './core' as *;
+
+//////////////////////////////////////////////
+/////////////////////////////////////////////
+//////////////////////////////////////////// General classes
+
 .container {
 	margin: 0 auto;
 	padding: 0 2rem;
@@ -6,11 +11,21 @@
 	max-width: 1200px;
 }
 
+.wrapper-contact {
+    max-width: 600px;
+    background: $light-color;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 section h2 {
 	text-align: center;
 }
 
-////////////////////////////////////////////////// Header
+//////////////////////////////////////////////
+/////////////////////////////////////////////
+//////////////////////////////////////////// Header
 
 .header {
 	padding: 10rem 2rem;
@@ -51,8 +66,8 @@ section h2 {
 	}
 }
 
-///////////////////////////////////////////// Header end
-////////////////////////////////////////////////////////
+//////////////////////////////////////////////
+/////////////////////////////////////////////
 //////////////////////////////////////////// Offer
 
 .offer {
@@ -98,9 +113,9 @@ section h2 {
 	}
 }
 
-///////////////////////////////////////////// Offer end
-////////////////////////////////////////////////////////
-//////////////////////////////////////////// Realizations
+/////////////////////////////////////////////
+////////////////////////////////////////////
+/////////////////////////////////////////// Realizations
 
 .realizations {
 	padding: 2rem 0;
@@ -179,9 +194,9 @@ section h2 {
 	}
 }
 
-///////////////////////////////////////////// Realizations end
-////////////////////////////////////////////////////////
-//////////////////////////////////////////// price
+//////////////////////////////////////////////
+/////////////////////////////////////////////
+//////////////////////////////////////////// Price
 
 .price {
 	padding: 2rem 0;
@@ -194,11 +209,19 @@ section h2 {
 	}
 }
 
+//////////////////////////////////////////////
+/////////////////////////////////////////////
+//////////////////////////////////////////// Contact
+
 .contact {
 	h2 {
 		margin-bottom: 2rem;
-	}
+	}	
 }
+
+//////////////////////////////////////////////
+/////////////////////////////////////////////
+//////////////////////////////////////////// Footer
 
 .footer {
 	padding-top: 2rem;
