--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -66,339 +65,12 @@ button {
   background: none;
   border: 0;
   cursor: pointer;
-  font-family: Helvetica, sans-serif, sans-serif;
   font-size: 1.6rem;
 }
 
-.nav {
-  background-color: #4f4f4f;
-}
-.nav .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem 0;
-}
-.nav .logo {
-  width: 80px;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 2rem;
-  background-color: azure;
-}
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 50%;
-  padding-top: 2rem;
-  background-color: silver;
-}
-.nav__list-item {
-  background-color: beige;
-  margin-bottom: 2rem;
-  padding: 1rem;
-}
-
-@media (min-width: 768px) {
-  .nav .container {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem;
-  }
-  .nav .logo {
-    margin-bottom: 0;
-  }
-  .nav__list {
-    flex-direction: row;
-  }
-}
-.btn {
-  display: block;
-  padding: 2rem;
-  background-color: #4f4f4f;
-  margin-bottom: 2rem;
-  text-align: center;
-  width: 100%;
-}
-
-@media (min-width: 768px) {
-  .btn {
-    width: 280px;
-    margin-right: 2rem;
-  }
-  .btn:last-child {
-    margin-right: 0;
-  }
-}
-@media (min-width: 1400px) {
-  .btn {
-    margin-right: 3rem;
-  }
-}
-.table-default {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.table-default th,
-td {
-  padding: 8px;
-  text-align: left;
-  border: 1px solid #f3f3f3;
-}
-
-/* Styl dla urządzeń mobilnych */
-@media screen and (max-width: 600px) {
-  .wrapper-table {
-    display: block;
-    overflow-x: auto;
-  }
-  .wrapper-table table,
-  .wrapper-table thead,
-  .wrapper-table tbody,
-  .wrapper-table th,
-  .wrapper-table td,
-  .wrapper-table tr {
-    display: block;
-  }
-  .wrapper-table thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
-  .wrapper-table tr {
-    margin-bottom: 2rem;
-    border: 1px solid #f3f3f3;
-  }
-  .wrapper-table td {
-    border: none;
-    position: relative;
-    padding-left: 50%;
-  }
-  .wrapper-table td::before {
-    position: absolute;
-    left: 0.6rem;
-    content: attr(data-label);
-    font-weight: bold;
-  }
-}
-.form-group {
-  margin-bottom: 1.5rem;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-.form-group input[type=text],
-.form-group input[type=email],
-.form-group textarea {
-  width: 100%;
-  padding: 1rem;
-  border: 1px solid #b6b6b6;
-  border-radius: 4px;
-}
-
-.wrapper-contact button {
-  width: 100%;
-  padding: 1rem;
-  background-color: #b6b6b6;
-  color: #f3f3f3;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.wrapper-contact button:hover {
-  background-color: #b0b0b0;
-}
-
-#responseMessage {
-  margin-top: 20px;
-}
-
-.container {
-  margin: 0 auto;
-  padding: 0 2rem;
-  width: 100%;
-  max-width: 1200px;
-}
-
-.wrapper-contact {
-  max-width: 600px;
-  background: #f3f3f3;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-section h2 {
-  text-align: center;
-}
-
 .header {
-  padding: 10rem 2rem;
-  background-color: #b6b6b6;
+  background-color: #0fbcf1;
 }
 .header h1 {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-.header p {
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
-@media (min-width: 768px) {
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .header p {
-    width: 60%;
-  }
-  .header__wrap {
-    display: flex;
-  }
-}
-@media (min-width: 1400px) {
-  .header h1 {
-    margin-bottom: 4rem;
-  }
-  .header p {
-    width: 820px;
-    margin-bottom: 5rem;
-  }
-}
-.offer {
-  padding: 2rem 0;
-  background-color: #4f4f4f;
-}
-.offer h2 {
-  margin-bottom: 2rem;
-}
-.offer__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 280px;
-  margin-bottom: 2rem;
-  background-color: #b6b6b6;
-}
-.offer__item h3 {
-  background-color: #4f4f4f;
-  padding: 1rem;
-}
-
-@media (min-width: 768px) {
-  .offer .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .offer__item {
-    width: 48%;
-    margin-bottom: 4rem;
-  }
-}
-@media (min-width: 992px) {
-  .offer__item {
-    width: 31%;
-  }
-}
-.realizations {
-  padding: 2rem 0;
-  background-color: #b6b6b6;
-}
-.realizations h2 {
-  margin-bottom: 2rem;
-}
-.realizations__text {
-  padding: 2rem;
-  text-align: center;
-  background-color: #f3f3f3;
-}
-.realizations .container .row {
-  margin-bottom: 4rem;
-}
-.realizations h3 {
-  margin-bottom: 1rem;
-}
-.realizations img {
-  display: block;
-  width: 100%;
-}
-.realizations p {
-  margin-bottom: 1rem;
-}
-.realizations ul {
-  margin-bottom: 2rem;
-}
-.realizations .btn {
-  width: 50%;
-  padding: 1rem;
-  margin: 0 auto;
-}
-
-@media (min-width: 992px) {
-  .realizations .container .row {
-    display: flex;
-  }
-  .realizations .container .row:nth-child(odd) .realizations__text {
-    order: 2;
-    text-align: left;
-  }
-  .realizations .container .row:nth-child(odd) .realizations__text .btn {
-    margin: 0;
-  }
-  .realizations .container .row:nth-child(odd) .realizations__image {
-    order: 1;
-  }
-  .realizations .container .row:nth-child(even) .realizations__text {
-    order: 1;
-    text-align: right;
-  }
-  .realizations .container .row:nth-child(even) .realizations__text .btn {
-    margin-right: 0;
-  }
-  .realizations .container .row:nth-child(even) .realizations__image {
-    order: 2;
-  }
-  .realizations__text {
-    width: 50%;
-    padding: 2rem;
-  }
-  .realizations__image {
-    width: 50%;
-  }
-}
-.price {
-  padding: 2rem 0;
-  background-color: #4f4f4f;
-}
-.price h2 {
-  margin-bottom: 2rem;
-}
-.price .wrapper-table {
-  margin-bottom: 2rem;
-}
-
-.contact h2 {
-  margin-bottom: 2rem;
-}
-
-.footer {
-  padding-top: 2rem;
-  background-color: #b6b6b6;
-}
-.footer__bottom {
-  padding: 2rem 0;
   text-align: center;
 }/*# sourceMappingURL=main.css.map */
