--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,6 @@
-// Main styles
-@use './partials/' as *;
+// ---------------------------------Main styles------------------------------------//
+//________________________________________________________________________________//
+@use './core/' as *;
+@use './components/' as *;
+@use './layout/' as *;
+
