--- a/sass/core/_variables.scss
+++ b/sass/core/_variables.scss
@@ -3,7 +3,7 @@
 
 // Colors
 $theme-color: #23a7ff;
-$secondary-color: #0fbcf1;
+$secondary-color: #0082aa;
 $light-color: #f3f3f3;
 $dark-color: #333;
 $grey-color: #808080;
