--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -2,3 +2,10 @@
 //________________________________________________________________________________//
 @use '../core/variables' as *;
 
+.container {
+	margin: 0 auto;
+	padding: 2rem;
+	width: 100%;
+	max-width: 1200px;
+}
+
