--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
   font-family: Helvetica, sans-serif, sans-serif;
   font-size: 1.6rem;
   line-height: 1.6;
+  background-color: #f3f3f3;
   color: #333;
   overflow-x: hidden;
 }
@@ -68,8 +69,52 @@ button {
   font-size: 1.6rem;
 }
 
+.nav .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.nav .container .logo {
+  margin-bottom: 2rem;
+}
+.nav__list {
+  min-width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.nav__list :last-child {
+  margin-bottom: 0;
+}
+.nav__list-item {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.nav__list-link {
+  display: block;
+  padding: 1rem;
+  text-align: center;
+  background-color: #23a7ff;
+  color: #f3f3f3;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  background-color: #23a7ff;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 2rem;
+  width: 100%;
+  max-width: 1200px;
+}
+
 .header {
-  background-color: #0fbcf1;
+  background-color: #23a7ff;
 }
 .header h1 {
   text-align: center;
