--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -2,3 +2,33 @@
 //________________________________________________________________________________//
 @use '../core/variables' as *;
 
+.nav {
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		.logo {
+			margin-bottom: 2rem;
+		}
+	}
+	&__list {
+        min-width: 50%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+        :last-child {
+            margin-bottom: 0;
+        }
+	}
+	&__list-item {
+        width: 100%;
+		margin-bottom: 2rem;
+	}
+	&__list-link {
+        display: block;
+        padding: 1rem;
+        text-align: center;
+        background-color: $theme-color;
+        color: $light-color;
+    }
+}
