--- a/sass/core/_base.scss
+++ b/sass/core/_base.scss
@@ -20,6 +20,7 @@ body {
 	font-family: $font-stack, sans-serif;
 	font-size: 1.6rem;
 	line-height: 1.6;
+	background-color: $light-color;
 	color: $dark-color;
 	overflow-x: hidden;
 }
