--- a/sass/layout/_offer.scss
+++ b/sass/layout/_offer.scss
@@ -2,3 +2,6 @@
 //________________________________________________________________________________//
 @use '../core/variables' as *;
 
+.offer {
+
+}
