--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -9,3 +9,14 @@
 	max-width: 1200px;
 }
 
+.button-box {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.section {
+	h2 {
+		text-align: center;
+	}
+}
