--- a/sass/layout/_offer.scss
+++ b/sass/layout/_offer.scss
@@ -3,5 +3,9 @@
 @use '../core/variables' as *;
 
 .offer {
-
+	&__item {
+		width: 100%;
+        height: 360px;
+        background-color: $grey-color;
+	}
 }
