--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -3,6 +3,7 @@
 @use '../core/variables' as *;
 
 .nav {
+    background-color: $dark-color;
 	.container {
 		display: flex;
 		flex-direction: column;
