--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,3 +2,6 @@
 //________________________________________________________________________________//
 @use '../core/variables' as *;
 
+.footer {
+    text-align: center;
+}
