--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -16,7 +16,17 @@
 }
 
 .section {
+	padding-top: 2rem;
 	h2 {
 		text-align: center;
 	}
+}
+.section:nth-child(odd) {
+	h2 {
+		color: $light-color;
+	}
+	background-color: $dark-color;
+}
+.section:nth-child(even) {
+	background-color: $light-color;
 }
