--- a/sass/core/_variables.scss
+++ b/sass/core/_variables.scss
@@ -19,6 +19,7 @@ $size-6: 6rem;
 $size-7: 8rem;
 
 // Margin page
+$margin-side-main-1: 2rem;
 $margin-page-small: $size-3;
 $margin-page-medium: $size-5;
 $margin-page-large: $size-7;
