--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,16 +6,18 @@
     background: #dddddd url('../img/ph_img.png') center;
     background-size: cover;
     padding: 8rem 2rem;
+
     h1 {
         text-align: center;
         margin-bottom: 2rem;
     }
+
     p {
         margin-bottom: 2rem;
         text-align: center;
     }
 
-    .btn {
+    button {
         margin-bottom: 2rem;
     }
 }
