--- a/css/main.css
+++ b/css/main.css
@@ -63,20 +63,24 @@ ul, li {
 }
 
 button {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
   background: none;
   border: 0;
   cursor: pointer;
   font-size: 1.6rem;
+  background-color: #23a7ff;
 }
 
-.btn--default {
-  width: 100%;
-  background: #23a7ff;
-}
-.btn--default a {
+.btn {
   display: block;
-  padding: 2rem 1rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
+  text-align: center;
   color: #f3f3f3;
+  background-color: #23a7ff;
 }
 
 .nav {
@@ -102,13 +106,6 @@ button {
 .nav__list-item {
   width: 100%;
   margin-bottom: 2rem;
-}
-.nav__list-link {
-  display: block;
-  padding: 1rem;
-  text-align: center;
-  background-color: #23a7ff;
-  color: #f3f3f3;
 }
 
 .logo {
@@ -167,7 +164,7 @@ button {
   margin-bottom: 2rem;
   text-align: center;
 }
-.header .btn {
+.header button {
   margin-bottom: 2rem;
 }
 
@@ -182,4 +179,75 @@ button {
 }
 .offer :last-child {
   margin-bottom: 0;
+}
+
+.realizations__text {
+  padding-bottom: 2rem;
+  text-align: center;
+}
+.realizations .container .row {
+  margin-bottom: 2rem;
+}
+.realizations .container .row::after {
+  content: "";
+  display: block;
+  width: 50%;
+  border-bottom: 2px solid #333;
+  margin: 0 auto;
+}
+.realizations .container .row:last-child {
+  margin-bottom: 0;
+}
+.realizations .container .row:last-child .realizations__text {
+  padding: 0;
+}
+.realizations .container .row:last-child::after {
+  display: none;
+}
+.realizations img {
+  display: block;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.realizations h3 {
+  margin-bottom: 1rem;
+}
+.realizations p {
+  margin-bottom: 1rem;
+}
+.realizations ul {
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 992px) {
+  .realizations .container .row {
+    display: flex;
+  }
+  .realizations .container .row:nth-child(odd) .realizations__text {
+    order: 2;
+    text-align: left;
+  }
+  .realizations .container .row:nth-child(odd) .realizations__text .btn {
+    margin: 0;
+  }
+  .realizations .container .row:nth-child(odd) .realizations__image {
+    order: 1;
+  }
+  .realizations .container .row:nth-child(even) .realizations__text {
+    order: 1;
+    text-align: right;
+  }
+  .realizations .container .row:nth-child(even) .realizations__text .btn {
+    margin-right: 0;
+  }
+  .realizations .container .row:nth-child(even) .realizations__image {
+    order: 2;
+  }
+  .realizations__text {
+    width: 50%;
+    padding: 2rem;
+  }
+  .realizations__image {
+    width: 50%;
+  }
 }/*# sourceMappingURL=main.css.map */
