--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -25,11 +25,11 @@
         width: 100%;
 		margin-bottom: 2rem;
 	}
-	&__list-link {
-        display: block;
-        padding: 1rem;
-        text-align: center;
-        background-color: $theme-color;
-        color: $light-color;
-    }
+	// &__list-link {
+    //     display: block;
+    //     padding: 1rem;
+    //     text-align: center;
+    //     background-color: $theme-color;
+    //     color: $light-color;
+    // }
 }
