--- a/sass/layout/_realizations.scss
+++ b/sass/layout/_realizations.scss
@@ -2,3 +2,99 @@
 //________________________________________________________________________________//
 @use '../core/variables' as *;
 
+.realizations {
+	&__text {
+		padding-bottom: 2rem;
+		text-align: center;
+	}
+
+	.container {
+		.row {
+			margin-bottom: 2rem;
+		}
+
+		.row::after {
+			content: '';
+			display: block;
+			width: 50%;
+			border-bottom: 2px solid $dark-color;
+			margin: 0 auto;
+		}
+
+		.row:last-child {
+			margin-bottom: 0;
+			.realizations__text {
+				padding: 0;
+			}
+		}
+
+		.row:last-child::after {
+			display: none;
+		}
+	}
+
+	img {
+		display: block;
+		width: 100%;
+		margin-bottom: 2rem;
+	}
+
+	h3 {
+		margin-bottom: 1rem;
+	}
+
+	p {
+		margin-bottom: 1rem;
+	}
+
+	ul {
+		margin-bottom: 2rem;
+	}
+}
+
+@media (min-width: 992px) {
+	.realizations {
+		.container {
+			.row {
+				display: flex;
+				&:nth-child(odd) {
+					.realizations__text {
+						order: 2;
+						text-align: left;
+
+						.btn {
+							margin: 0;
+						}
+					}
+
+					.realizations__image {
+						order: 1;
+					}
+				}
+				&:nth-child(even) {
+					.realizations__text {
+						order: 1;
+						text-align: right;
+
+						.btn {
+							margin-right: 0;
+						}
+					}
+
+					.realizations__image {
+						order: 2;
+					}
+				}
+			}
+		}
+
+		&__text {
+			width: 50%;
+			padding: 2rem;
+		}
+
+		&__image {
+			width: 50%;
+		}
+	}
+}
