--- a/sass/layout/_realizations.scss
+++ b/sass/layout/_realizations.scss
@@ -52,6 +52,8 @@
 	}
 }
 
+/* ------------------ Styles for minimum 992px screens ---------------- */
+
 @media (min-width: 992px) {
 	.realizations {
 		.container {
